--- a/templates/home.html
+++ b/templates/home.html
@@ -1,28 +1,37 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Fantasy League</title>
-  <style>
-    /* center the buttons */
-    body {
-      display: flex;
-      height: 100vh;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      font-family: sans-serif;
-    }
-    .btn {
-      padding: 1em 2em;
-      margin: 0 1em;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'draft/css/style.css' %}">
 </head>
 <body>
-  <a href="/login/"><button class="btn">Login</button></a>
-  <a href="/signup/"><button class="btn">Signup</button></a>
+  <div id="button-container">
+    <button id="loginBtn" class="btn">Login</button>
+    <button id="signupBtn" class="btn">Signup</button>
+  </div>
+
+  <div id="forms">
+    <div id="loginForm" class="form-container">
+      <form action="{% url 'dashboard' %}" method="get">
+        <input type="text"  name="username"        placeholder="Username"       required>
+        <input type="password" name="password"        placeholder="Password"       required>
+        <button type="submit" class="btn">Login</button>
+      </form>
+    </div>
+
+    <div id="signupForm" class="form-container">
+      <form action="{% url 'dashboard' %}" method="get">
+        <input type="email"    name="email"            placeholder="Email"              required>
+        <input type="email"    name="email_confirm"    placeholder="Confirm Email"      required>
+        <input type="text"     name="username"         placeholder="Username"           required>
+        <input type="password" name="password"         placeholder="Password"           required>
+        <input type="password" name="password_confirm" placeholder="Confirm Password"   required>
+        <button type="submit"  class="btn">Sign Up</button>
+      </form>
+    </div>
+  </div>
+<script src="{% static 'draft/js/auth_toggle.js' %}"></script>
 </body>
 </html>
