bug fixes and league_detail changes

--- a/templates/create_league.html
+++ b/templates/create_league.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Create League</title>
-  <link rel="stylesheet" href="{% static 'draft/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/components.css' %}">
 </head>
 <body>
   <div style="position:absolute; top:1rem; left:1rem;">
