--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Fantasy League</title>
-  <link rel="stylesheet" href="{% static 'draft/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/components.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/landing.css' %}">
+
 </head>
 <body class="landing-page">
   <div id="button-container">
