--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Log In</title>
-  <link rel="stylesheet" href="{% static 'draft/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'draft/css/components.css' %}">
 </head>
 <body>
   <div class="form-container active">
