Add live draft ready checking

--- a/draft/static/draft/css/league.css
+++ b/draft/static/draft/css/league.css
@@ -169,3 +169,13 @@
 .modal-buttons .btn {
   width: 45%;
 }
+
+#beginDraftBtn.gold {
+  background: goldenrod;
+  color: #fff;
+}
+
+.slots-panel .slot.ready { 
+  background-color: #d4ffd4;
+}
+
